tests/parser/stmt_parser/snapshots/r#mod__parser__stmt_parser__op_decl_parser__parse_infix_def_right.snap
---
source: tests/parser/stmt_parser/op_decl_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 57,
        },
        kind: InfixDefine {
            symbol: "%",
            props: InfixOperatorProperties {
                precedence: 60,
                associativity: Right,
                range: Range {
                    start: 19,
                    end: 55,
                },
            },
        },
    },
]
