tests/parser/stmt_parser/snapshots/r#mod__parser__stmt_parser__op_decl_parser__parse_postfix_def.snap
---
source: tests/parser/stmt_parser/op_decl_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 37,
        },
        kind: PostfixDefine {
            symbol: "!",
            props: PostfixOperatorProperties {
                precedence: 20,
                range: Range {
                    start: 21,
                    end: 36,
                },
            },
        },
    },
]
