tests/parser/stmt_parser/snapshots/r#mod__parser__stmt_parser__op_decl_parser__parse_postfix_func.snap
---
source: tests/parser/stmt_parser/op_decl_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 40,
        },
        kind: OperatorFunc {
            op_type: Postfix,
            symbol: "!",
            params: [
                ParserFuncParam {
                    label: Some(
                        "_",
                    ),
                    name: "operand",
                    value_type: Some(
                        SymbolPath {
                            components: [
                                SymbolPathComponent {
                                    symbol: "Int",
                                },
                            ],
                        },
                    ),
                    def_val: None,
                    range: Range {
                        start: 15,
                        end: 29,
                    },
                },
            ],
            return_type: SymbolPath {
                components: [
                    SymbolPathComponent {
                        symbol: "Int",
                    },
                ],
            },
            body: [],
        },
    },
]
