tests/parser/stmt_parser/snapshots/r#mod__parser__stmt_parser__op_decl_parser__parse_prefix_func.snap
---
source: tests/parser/stmt_parser/op_decl_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 39,
        },
        kind: OperatorFunc {
            op_type: Prefix,
            symbol: "-",
            params: [
                ParserFuncParam {
                    label: Some(
                        "_",
                    ),
                    name: "operand",
                    value_type: Some(
                        SymbolPath(
                            SymbolPath {
                                components: [
                                    SymbolPathComponent {
                                        symbol: "Int",
                                    },
                                ],
                            },
                        ),
                    ),
                    def_val: None,
                    range: Range {
                        start: 14,
                        end: 28,
                    },
                },
            ],
            return_type: SymbolPath(
                SymbolPath {
                    components: [
                        SymbolPathComponent {
                            symbol: "Int",
                        },
                    ],
                },
            ),
            body: [],
        },
    },
]
